--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
 Zeigerdiagramm.py
+physikcode/README.md
+Sympy/SymPy_Crash_Kurs.ipynb
+Sympy/Woche_01/Arbeitsblatt_1.ipynb
+Sympy/Woche_01/Blatt_7.ipynb
+Sympy/Woche_01/Intro.ipynb
+Sympy/Woche_01/figs/Gummibaelle_1.png
+Sympy/Woche_01/figs/Gummibaelle_2.png
+Sympy/Woche_01/figs/Gummibaelle_3.png
+Sympy/Woche_01/figs/Gummibaelle_4.png
+Sympy/Woche_02/Arbeitsblatt_2.ipynb
+Sympy/Woche_02/Physikalische_Einheiten_mit_numpy.ipynb
+Sympy/Woche_02/Plots_der_MWB_Verteilung.ipynb
+Sympy/Woche_02/video/mwb_animation.mp4
+Theo. 1/Pendelverlauf.ipynb
+Computerphysik/.vscode/settings.json
+Computerphysik/ha3/.vscode/settings.json
+Ex. 2/collection-2024-09-05@13-58-53.colpkg
+Ex. 2/collection-2024-09-12@11-58-08.colpkg
+Ex. 2/Ex2.apkg
